# humanly

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: publish.yml
src/: core.rs  human.rs  lib.rs  models.rs
