[package]
name = "humanly"
description = "A pure Rust crate to convert numbers, sizes, durations, times, and percentages into human-readable formats."
version = "0.1.1"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["Ritchie Mwewa <hi@rly0nheart.com>"]
repository = "https://codeberg.org/rly0nheart/humanly"
